# bip322-signer

./: .gitignore  Cargo.toml  README.md
examples/ffi-go/: bip322_simple.h  go.mod  main.go
src/: hashing.rs  lib.rs  wallet.rs
