[package]
name = "bip322-simple"
version = "0.2.0"
edition = "2021"
description = "Simple bitcoin message signer for nested segwit wallets"
license = "CC0-1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
hex = "0.4.3"
miniscript = "10.0.0"
sha2 = "0.10.6"
base64 = "0.21.2"
libc = {version = "0.2.146", optional = true}

[features]
ffi = ["libc"]

[lib]
crate-type = ["cdylib", "lib"]
